--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <script src="app.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BrightBlogSite</title>
+    <title>Leia'sCookieRecipe</title>
 </head>
 <body>
     <header>
         <!-- content of header goes here -->
-         <h1>BrightBlog</h1>
+         <h1>Leia's Cookie Recipe</h1>
          <nav>
             <ul>
                 <li>
                     <a href="">Home</a>
                 </li>
                 <li>
-                    <a href="">About us</a>
+                    <a href="https://www.bbcgoodfood.com">Other recipes</a>
                 </li>
                 <li>
                     <a href="">Contact</a>
@@ -29,12 +29,12 @@
         <div id="main-content">
             <aside>
                 <section>
-                    <h4>Filter by month</h4>
+                    <h4>Ingredients</h4>
                     <nav>
                         <ul>
-                            <li><a href="">Filter for January</a></li>
-                            <li><a href="">Filter for February</a></li>
-                            <li><a href="">Filter for March</a></li>
+                            <li><a href="https://www.ocado.com/products/ocado-british-unsalted-butter-556966011" target="_blank"> 150g butter, softened</a></li>
+                            <li><a href="https://www.ocado.com/products/tate-lyle-fairtrade-light-soft-brown-sugar-19330011?srsltid=AfmBOooNqICLxkiaNLcVoOPqqlxV6s36W4CMvkUgVnUz4qgOHoD_BGqF" target="_blank">150g soft brown sugar</a></li>
+                            <li><a href="" target="_blank">Filter for March</a></li>
                         </ul>
                     </nav>
                 </section>
