--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@700&display=swap">
     <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>
     <meta charset="UTF-8">
@@ -31,87 +32,50 @@
                 <section>
                     <h4>Ingredients</h4>
                     <nav>
-                        <ul>
+                        <ul id="ingredient-list">
                             <li><a href="https://www.ocado.com/products/ocado-british-unsalted-butter-556966011" target="_blank"> 150g butter, softened</a></li>
                             <li><a href="https://www.ocado.com/products/tate-lyle-fairtrade-light-soft-brown-sugar-19330011?srsltid=AfmBOooNqICLxkiaNLcVoOPqqlxV6s36W4CMvkUgVnUz4qgOHoD_BGqF" target="_blank">150g soft brown sugar</a></li>
-                            <li><a href="" target="_blank">Filter for March</a></li>
+                            <li><a href="https://www.ocado.com/products/ocado-medium-free-range-eggs-79467011" target="_blank">1 egg</a></li>
+                            <li><a href="https://www.ocado.com/products/nielsen-massey-vanilla-extract-439185011?srsltid=AfmBOoovYc6DMxsoFTY7WHW9ZBrzLNRfXIY9W8gTs1dqDENmYYFzf8Sz" target="_blank"> 1 tsp vanilla extract</a></li>
+                            <li><a href="https://www.ocado.com/products/ocado-british-plain-flour-407678011?srsltid=AfmBOorhjsrgdwH9x-FEmCgdH_iwBMqO5-7Em5OQc1_elCsiIY8aIGht" target="_blank">180-200g plain flour (see tip below)</a></li>
+                            <li><a href="https://www.ocado.com/products/dr-oetker-baking-powder-328529011" target="_blank">½ tsp baking powder</a></li>
+                            <li><a href="https://www.ocado.com/products/dr-oetker-milk-chocolate-chips-10850011?srsltid=AfmBOorqLr_LuVkAkx_Tu-oDr0u9awJLE8iPBaRFd9VsEi2ShDM7g-R0" target="_blank">200g chocolate chips</a></li>
                         </ul>
                     </nav>
                 </section>
-                <h4>Filter by category</h4>
-                <nav>
-                    <ul>
-                        <li><a href="">Puppies</a></li>
-                        <li><a href="">Dogs</a></li>
-                        <li><a href="">Cats</a></li>
-                        <li><a href="">Hedgehogs</a></li>
-                    </ul>
-                </nav>
                 <section>
-    
+                    <div id="tip">
+                        <h4>Top Tip: Flour</h4>
+                        <p>If you're leaving the cookie dough overnight, or want thinner cookies, use 180g flour. If you're cooking them straight away, or want more cakey cookies, use 200g flour.</p>
+                    </div>
                 </section>
             </aside>
             <div>
                 <article>
-                    <header>
+                    <header id="main-header">
                         <!-- Article's header goes here -->
-                         <h2>Ten Amusing Facts About Dogs</h2>
-                         <h3>Read time: 5 mins</h3>
+                         <h2>Method</h2>
+                         <div>
+                            <h3>Prep: 10 mins</h3>
+                            <h3>Cook: 10 mins</h3>
+                            <h3>Difficulty level: Easy</h3>
+                         </div>
                     </header>
                     <main>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor asperiores ratione hic quas vero nihil cupiditate aliquam, odit nemo voluptas fugit nesciunt excepturi totam modi! Nam doloribus minus ea ab dolore molestias officia architecto corporis porro voluptate. Magnam, nam enim quo eius hic nihil? Incidunt deleniti qui cumque dolorem in perspiciatis enim nesciunt! Sequi deleniti dolores ducimus ut adipisci officia, architecto facilis quo! Architecto voluptate voluptates officia maxime ullam esse, ratione id culpa laborum asperiores nisi optio cum quis numquam a soluta magni, voluptas sint molestias impedit. Quo optio unde omnis dolor aperiam! Quasi delectus molestiae natus libero facere sed.</p>
-                        <blockquote>
-                            "I love puppies" - <cite>Leia, 2024</cite>
-                        </blockquote>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus impedit doloremque nisi minus tempora quas ducimus, error voluptatum nulla? Deserunt dolorem doloremque asperiores aperiam nesciunt, pariatur consectetur omnis eius eum voluptatum veritatis alias ullam corporis ratione, distinctio eos iure fuga earum harum animi explicabo neque. Doloribus saepe aspernatur corrupti exercitationem ab assumenda sed reiciendis odit sint beatae asperiores praesentium placeat inventore accusamus nihil officia at ullam quod iste suscipit repellat nesciunt, reprehenderit odio autem? Quidem obcaecati non ab amet quis.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, culpa commodi quod nostrum sit mollitia excepturi itaque incidunt voluptas, dolorum molestias. Maiores, quasi dignissimos. Nemo rem explicabo, quibusdam aspernatur consectetur minima fugiat delectus error reiciendis quae itaque, recusandae et corrupti voluptas eum. Voluptatem, corrupti. Excepturi dolores dolore qui eligendi odit laudantium adipisci dolorem cum voluptatem harum repellendus est corporis unde fugit sapiente, aliquam in maiores officiis provident. Quibusdam delectus deleniti hic maiores recusandae, magni autem molestias placeat doloremque suscipit reprehenderit, animi perspiciatis magnam saepe consequuntur fugiat assumenda molestiae repudiandae dolores iusto distinctio aliquam ipsum minima repellendus. Laboriosam quaerat commodi, aut vel, molestiae numquam sit, reiciendis dolorum ex minus similique asperiores odio ut! Ipsam, quam! Voluptatem amet magni harum adipisci ipsa eligendi accusantium ex explicabo distinctio, fugiat beatae culpa sint, animi quo aspernatur veniam? Autem, quod saepe ratione fuga iure libero non dolorem quis vero ipsa nobis optio consequatur totam animi.</p>
+                        <p>
+                            1. Mix the butter and sugar together using an electric whisk or hand whisk until very light and fluffy, then beat in the egg and vanilla. Fold in the flour, baking powder, chocolate and ¼ tsp salt as quickly as you can. Don’t overwork the dough as this will toughen the cookies.
+                        </p>
+                        <p> 2. For the best flavour, leave the mixture overnight: either cover the bowl and chill, or roll the mixture into balls and chill.
+                        </p>
+                        <p>3. Heat the oven to 180C/160C fan/gas 4 and line two baking sheets with parchment. Divide the mixture into balls, the craggier the balls, the rougher the cookies will look. If you want to give the dough more texture, tear the balls in half and squidge them lightly back together. Space out evenly on the baking sheets, leaving enough space between each to allow for spreading.
+                        </p>
+                        <p>4. Bake the fresh cookies for 8-10 mins and the chilled ones for 10-12 mins, or until browned and a little crisp at the edges but still very soft in the middle – they will harden a little as they cool. Leave to cool on the tray for a few minutes before eating warm, or transfer to a wire rack to cool completely. Will keep for three days in an airtight container.
+                        </p>
                     </main>
                     <footer>
                         <h2>Author: Leia</h2>
                         <img src="https://placebear.com/100/100" alt="A profile picture of a bear">
-                        <h3>Last posted: 01/01/24</h3>
-                        <a href="https://www.brightnetwork.co.uk" target="_blank">Author's profile</a>
-                    </footer>
-                </article>
-                <article>
-                    <header>
-                        <!-- Article's header goes here -->
-                         <h2>Ten Amusing Facts About Dogs</h2>
-                         <h3>Read time: 5 mins</h3>
-                    </header>
-                    <main>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor asperiores ratione hic quas vero nihil cupiditate aliquam, odit nemo voluptas fugit nesciunt excepturi totam modi! Nam doloribus minus ea ab dolore molestias officia architecto corporis porro voluptate. Magnam, nam enim quo eius hic nihil? Incidunt deleniti qui cumque dolorem in perspiciatis enim nesciunt! Sequi deleniti dolores ducimus ut adipisci officia, architecto facilis quo! Architecto voluptate voluptates officia maxime ullam esse, ratione id culpa laborum asperiores nisi optio cum quis numquam a soluta magni, voluptas sint molestias impedit. Quo optio unde omnis dolor aperiam! Quasi delectus molestiae natus libero facere sed.</p>
-                        <blockquote>
-                            "I love puppies" - <cite>Leia, 2024</cite>
-                        </blockquote>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus impedit doloremque nisi minus tempora quas ducimus, error voluptatum nulla? Deserunt dolorem doloremque asperiores aperiam nesciunt, pariatur consectetur omnis eius eum voluptatum veritatis alias ullam corporis ratione, distinctio eos iure fuga earum harum animi explicabo neque. Doloribus saepe aspernatur corrupti exercitationem ab assumenda sed reiciendis odit sint beatae asperiores praesentium placeat inventore accusamus nihil officia at ullam quod iste suscipit repellat nesciunt, reprehenderit odio autem? Quidem obcaecati non ab amet quis.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, culpa commodi quod nostrum sit mollitia excepturi itaque incidunt voluptas, dolorum molestias. Maiores, quasi dignissimos. Nemo rem explicabo, quibusdam aspernatur consectetur minima fugiat delectus error reiciendis quae itaque, recusandae et corrupti voluptas eum. Voluptatem, corrupti. Excepturi dolores dolore qui eligendi odit laudantium adipisci dolorem cum voluptatem harum repellendus est corporis unde fugit sapiente, aliquam in maiores officiis provident. Quibusdam delectus deleniti hic maiores recusandae, magni autem molestias placeat doloremque suscipit reprehenderit, animi perspiciatis magnam saepe consequuntur fugiat assumenda molestiae repudiandae dolores iusto distinctio aliquam ipsum minima repellendus. Laboriosam quaerat commodi, aut vel, molestiae numquam sit, reiciendis dolorum ex minus similique asperiores odio ut! Ipsam, quam! Voluptatem amet magni harum adipisci ipsa eligendi accusantium ex explicabo distinctio, fugiat beatae culpa sint, animi quo aspernatur veniam? Autem, quod saepe ratione fuga iure libero non dolorem quis vero ipsa nobis optio consequatur totam animi.</p>
-                    </main>
-                    <footer>
-                        <h2>Author: Leia</h2>
-                        <img src="https://placebear.com/100/100" alt="A profile picture of a bear">
-                        <h3>Last posted: 01/01/24</h3>
-                        <a href="https://www.brightnetwork.co.uk" target="_blank">Author's profile</a>
-                    </footer>
-                </article>
-                <article>
-                    <header>
-                        <!-- Article's header goes here -->
-                         <h2>Ten Amusing Facts About Dogs</h2>
-                         <h3>Read time: 5 mins</h3>
-                    </header>
-                    <main>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor asperiores ratione hic quas vero nihil cupiditate aliquam, odit nemo voluptas fugit nesciunt excepturi totam modi! Nam doloribus minus ea ab dolore molestias officia architecto corporis porro voluptate. Magnam, nam enim quo eius hic nihil? Incidunt deleniti qui cumque dolorem in perspiciatis enim nesciunt! Sequi deleniti dolores ducimus ut adipisci officia, architecto facilis quo! Architecto voluptate voluptates officia maxime ullam esse, ratione id culpa laborum asperiores nisi optio cum quis numquam a soluta magni, voluptas sint molestias impedit. Quo optio unde omnis dolor aperiam! Quasi delectus molestiae natus libero facere sed.</p>
-                        <blockquote>
-                            "I love puppies" - <cite>Leia, 2024</cite>
-                        </blockquote>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus impedit doloremque nisi minus tempora quas ducimus, error voluptatum nulla? Deserunt dolorem doloremque asperiores aperiam nesciunt, pariatur consectetur omnis eius eum voluptatum veritatis alias ullam corporis ratione, distinctio eos iure fuga earum harum animi explicabo neque. Doloribus saepe aspernatur corrupti exercitationem ab assumenda sed reiciendis odit sint beatae asperiores praesentium placeat inventore accusamus nihil officia at ullam quod iste suscipit repellat nesciunt, reprehenderit odio autem? Quidem obcaecati non ab amet quis.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, culpa commodi quod nostrum sit mollitia excepturi itaque incidunt voluptas, dolorum molestias. Maiores, quasi dignissimos. Nemo rem explicabo, quibusdam aspernatur consectetur minima fugiat delectus error reiciendis quae itaque, recusandae et corrupti voluptas eum. Voluptatem, corrupti. Excepturi dolores dolore qui eligendi odit laudantium adipisci dolorem cum voluptatem harum repellendus est corporis unde fugit sapiente, aliquam in maiores officiis provident. Quibusdam delectus deleniti hic maiores recusandae, magni autem molestias placeat doloremque suscipit reprehenderit, animi perspiciatis magnam saepe consequuntur fugiat assumenda molestiae repudiandae dolores iusto distinctio aliquam ipsum minima repellendus. Laboriosam quaerat commodi, aut vel, molestiae numquam sit, reiciendis dolorum ex minus similique asperiores odio ut! Ipsam, quam! Voluptatem amet magni harum adipisci ipsa eligendi accusantium ex explicabo distinctio, fugiat beatae culpa sint, animi quo aspernatur veniam? Autem, quod saepe ratione fuga iure libero non dolorem quis vero ipsa nobis optio consequatur totam animi.</p>
-                    </main>
-                    <footer>
-                        <h2>Author: Leia</h2>
-                        <img src="https://placebear.com/100/100" alt="A profile picture of a bear">
-                        <h3>Last posted: 01/01/24</h3>
+                        <h3>Posted: 01/01/24</h3>
                         <a href="https://www.brightnetwork.co.uk" target="_blank">Author's profile</a>
                     </footer>
                 </article>
