--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Capriola&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@700&display=swap">
     <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>
@@ -55,6 +58,7 @@
                     <header id="main-header">
                         <!-- Article's header goes here -->
                          <h2>Method</h2>
+                         <br>
                          <div>
                             <h3>Prep: 10 mins</h3>
                             <h3>Cook: 10 mins</h3>
@@ -71,12 +75,15 @@
                         </p>
                         <p>4. Bake the fresh cookies for 8-10 mins and the chilled ones for 10-12 mins, or until browned and a little crisp at the edges but still very soft in the middle – they will harden a little as they cool. Leave to cool on the tray for a few minutes before eating warm, or transfer to a wire rack to cool completely. Will keep for three days in an airtight container.
                         </p>
+                        <br>
                     </main>
                     <footer>
-                        <h2>Author: Leia</h2>
-                        <img src="https://placebear.com/100/100" alt="A profile picture of a bear">
-                        <h3>Posted: 01/01/24</h3>
-                        <a href="https://www.brightnetwork.co.uk" target="_blank">Author's profile</a>
+                        <div id="article-footer">
+                            <h2>Author: Leia</h2>
+                            <img src="https://placebear.com/100/100" alt="A profile picture of a bear">
+                            <h3>Posted: 10/09/24</h3> 
+                        </div>
+                        <a href="https://www.brightnetwork.co.uk" target="_blank">Author's website credentials</a>
                     </footer>
                 </article>
             </div>
