--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="main-content">
             <aside>
                 <section>
-                    <h4>Ingredients</h4>
+                    <h3>Ingredients</h3>
                     <nav>
                         <ul id="ingredient-list">
                             <li><a href="https://www.ocado.com/products/ocado-british-unsalted-butter-556966011" target="_blank"> 150g butter, softened</a></li>
@@ -48,7 +48,7 @@
                 </section>
                 <section>
                     <div id="tip">
-                        <h4>Top Tip: Flour</h4>
+                        <h3>Top Tip: Flour</h3>
                         <p>If you're leaving the cookie dough overnight, or want thinner cookies, use 180g flour. If you're cooking them straight away, or want more cakey cookies, use 200g flour.</p>
                     </div>
                 </section>
@@ -58,7 +58,6 @@
                     <header id="main-header">
                         <!-- Article's header goes here -->
                          <h2>Method</h2>
-                         <br>
                          <div>
                             <h3>Prep: 10 mins</h3>
                             <h3>Cook: 10 mins</h3>
@@ -75,7 +74,6 @@
                         </p>
                         <p>4. Bake the fresh cookies for 8-10 mins and the chilled ones for 10-12 mins, or until browned and a little crisp at the edges but still very soft in the middle – they will harden a little as they cool. Leave to cool on the tray for a few minutes before eating warm, or transfer to a wire rack to cool completely. Will keep for three days in an airtight container.
                         </p>
-                        <br>
                     </main>
                     <footer>
                         <div id="article-footer">
@@ -88,66 +86,61 @@
                 </article>
             </div>
         </div>
+        <div id="form">
+            <hr>
+            <h2>What other recipes would you like to see most?</h2>
+           <form action="" method="">
+               <label for="first_name">First Name:</label>
+               <input type="text" id="first_name" name="first_name" required>
+               <br>
+               <label for="last_name">Last Name:</label>
+               <input type="text" id="last_name" name="last_name" required>
+               <br>
+               <label for="email">Email:</label>
+               <input type="email" id="email" name="email" required>
+               <br>
+               <label for="country">Our next recipe:</label>
+               <select name="country" id="country">
+                   <option value="chocolate-brownies">Chocolate Brownies</option>
+                   <option value="victoria-sponge-cake">Victoria sponge cake</option>
+                   <option value="chocolate-cake">Chocolate cake</option>
+                   <option value="strawberry-cheesecake">Strawberry Cheesecake</option>
+                   <option value="shortbread">Shortbread</option>
+                   <option value="apple-crumble">Apple Crumble</option>
+               </select>
+               <br>
+               <label for="bio">Any other recipes or comments:</label>
+               <textarea name="bio" id="bio"></textarea>
+               <br>
+               <input type="checkbox" id="subscribe" name="subscribe">
+               <label for="subscribe">Subscribe to our regular recipe emails!</label>
+               <br>
+               <input type="submit" value="Send!">
+   
+           </form>
+           <hr>
+        </div>
 
         <!-- main content of the webiste goes here -->
-         <hr>
-         <h2>Sign up for our newsletter!</h2>
-        <form action="" method="">
-            <label for="first_name">First Name:</label>
-            <input type="text" id="first_name" name="first_name" required>
-            <br>
-            <label for="last_name">Last Name:</label>
-            <input type="text" id="last_name" name="last_name" required>
-            <br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <br>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-            <br>
-            <label for="favourite_animal">Favourite animal:</label>
-            <input type="radio" id="dog" name="favourite_animal" value="dog">
-            <label for="dog">Dog</label>
-            <input type="radio" id="cat" name="favourite_animal" value="cat">
-            <label for="cat">Cat</label>
-            <input type="radio" id="hedgehog" name="favourite_animal" value="hedgehog">
-            <label for="hedgehog">Hedgehog</label>
-            <br>
-            <label for="country">Country</label>
-            <select name="country" id="country">
-                <option value="england">England</option>
-                <option value="scotland">Scotland</option>
-                <option value="wales">Wales</option>
-                <option value="northern_ireland">Northern Ireland</option>
-            </select>
-            <br>
-            <label for="bio">Biography:</label>
-            <textarea name="bio" id="bio"></textarea>
-            <br>
-            <input type="checkbox" id="subscribe" name="subscribe">
-            <label for="subscribe">Subscribe to our newsletter!</label>
-            <br>
-            <input type="submit" value="Send!">
-
-        </form>
-        <hr>
-
     </main>
     <footer>
         <!-- main content of footer goes here -->
-         <h2>BrightBlogSite</h2>
+         <h2>Leia's Cookie Recipe</h2>
          <section>
             <nav>
                 <ul>
                     <div> 
                         <li><a href="">Home</a></li>
+                        <br>
                         <li><a href="">About us</a></li>
+                        <br>
                         <li><a href="">Contact</a></li>
-                        <li><a href="">Careers</a></li>
                     </div>
                     <div>
                         <li><a href="">Privacy Policy</a></li>
+                        <br>
                         <li><a href="">Terms & Conditions</a></li>
+                        <br>
                         <li><a href="">Cookie Policy</a></li>
                     </div>
                 </ul>
